# googlyeyes

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: health.py  routes.py  transform.py
app/core/: config.py  lifespan.py
app/service/: googly.py
tests/: conftest.py
tests/api/: test_health.py  test_transform.py
tests/service/: test_googly.py
